# rag-langserve

./: README.md
my-langserve/: .env  .env.gcp.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
my-langserve/app/: server.py
my-langserve/docs/: monaco_data.parquet
